syntax = "proto3";

package user;

option go_package = "github.com/Dagosu/BookingApp/datatypes";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message CheckCredentialsRequest {
    string email = 1;
    string password = 2;
}

message CheckCredentialsResponse {
    string user_id = 1;
    bool auhtorized = 2;
}

service UserService {
    rpc CheckCredentials(CheckCredentialsRequest) returns (CheckCredentialsResponse);
}
